# HothouseExamples

./: .gitattributes  .gitignore  README.md  build_examples.py  create_new_proj.py  gpl-2.0
.devcontainer/: Dockerfile  devcontainer.json
Funbox-to-Hothouse-Port/Earth/earth_hothouse_binary_package/: README.md
Funbox-to-Hothouse-Port/Earth/earth_hothouse_binary_package/documentation/: EarthHothouseBinaryInstallationGuide.md
Funbox-to-Hothouse-Port/Earth/earth_hothouse_binary_package/source_attribution/: ATTRIBUTION.md  funbox_earth_original_license.txt
Funbox-to-Hothouse-Port/Earth/earth_hothouse_binary_package/support/: web_programmer_links.txt
Funbox-to-Hothouse-Port/Earth/earth_hothouse_source/: BUILD_INSTRUCTIONS.md  CONTROLS_REFERENCE.md  LICENSE  Makefile  README.md  earth_hothouse.cpp  expressionHandler.h
Funbox-to-Hothouse-Port/Earth/earth_hothouse_source/infra/: CMakeLists.txt  README.md
Funbox-to-Hothouse-Port/Earth/earth_hothouse_source/infra/cmake/: GitUtilities.cmake  LICENSE_SFIZZ.md
Funbox-to-Hothouse-Port/Earth/earth_hothouse_source/infra/include/infra/: base64.hpp  index_iterator.hpp  optional.hpp  stride_iterator.hpp
Funbox-to-Hothouse-Port/Mars/mars_hothouse_binary_package/: README.md
Funbox-to-Hothouse-Port/Mars/mars_hothouse_v1.1_source/: BUILD_INSTRUCTIONS.md  CHANGELOG.md  DEPENDENCIES.md  LICENSE  README.md
Funbox-to-Hothouse-Port/Mars/mars_hothouse_v1.1_source/src/: Makefile  (+3 more)
Funbox-to-Hothouse-Port/Venus/venus_hothouse_binary_package/: README.md
Funbox-to-Hothouse-Port/Venus/venus_hothouse_source/: BUILD_INSTRUCTIONS.md  CONTROLS_REFERENCE.md  LICENSE  Makefile  README.md  venus_hothouse.cpp
max/: README
max/idmpedals/: README
pd/: README.md  hothouse-delay.pd  hothouse-switch.pd  hothouse-tremolo.pd  hothouse.json
pd/DattorroReverb/: 0-demo.pd  2tap-allpass.pd  allpass.pd  dattorro-reverb.pd  hothouse-dattorro-reverb.pd  mod-allpass.pd
resources/_template/: Makefile  README.md  _template.cpp
src/: Makefile  hothouse.cpp  hothouse.h
src/AmnesiaDelay/: Makefile  README.md  amnesia_delay.cpp
src/BasicChorus/: Makefile  README.md  basic_chorus.cpp
src/BasicFlanger/: Makefile  README.md  basic_flanger.cpp
src/BasicMultiDelay/: Makefile  README.md  basic_multi_delay.cpp
src/BasicPhaser/: Makefile  README.md  basic_phaser.cpp
src/BasicSpringReverb/: Makefile  README.md  basic_spring_reverb.cpp
src/BasicSynth/: Makefile  README.md  basic_synth.cpp
src/BasicTremolo/: Makefile  README.md  basic_tremolo.cpp
src/EchoKing/: Makefile  README.md  echo_king.cpp
src/Flick/: Makefile  README.md  flick.cpp  flick_oscillator.cpp  flick_oscillator.h
src/Flick/PlateauNEVersio/: Dattorro.cpp  Dattorro.hpp
src/Frippertronics/: Makefile  README.md  frippertronics.cpp
src/GlowjobPhotonVibe/: Makefile  README.md  glowjob_photon_vibe.cpp
src/HardwareTest/: Makefile  README.md  hardware_test.cpp
src/HarmonicTremVerb/: Makefile  README.md  extended_oscillator.cpp  extended_oscillator.h  harmonic_trem_verb.cpp
src/HelloWorld/: Makefile  README.md  hello-world.cpp
src/LibreVerb/: Makefile  README.md  freeverb_core.h  libre_verb.cpp
src/MegaTremolo/: Makefile  README.md  mega_tremolo.cpp
src/ModDelay/: Makefile  README.md  mod_delay.cpp
src/ResetToBootloader/: Makefile  README.md  reset_to_bootloader.cpp
src/ShimmerVerb/: Makefile  README.md  shimmer_verb.cpp
src/StereoReverbWithTails/: Makefile  README.md  stereo_reverb_with_tails.cpp
src/StereoTest/: Makefile  README.md  stereo_test.cpp
src/TapeSimulator/: Makefile  README.md  StkPitchShift.h  fast_math.h  tape_simulator.cpp
src/TremVerb/: Makefile  README.md  trem_verb.cpp
src/TriChorus/: Makefile  README.md  tri_chorus.cpp
src/TriPhaseTheorem/: Makefile  README.md  tri_phase_theorem.cpp
src/buzzbox_octa_squawker/: .gitignore.txt  ATTRIBUTION.md  LICENSE  README.md
src/buzzbox_octa_squawker/docs/: BUILD_INSTRUCTIONS.md  CONTROLS_REFERENCE.md  SIGNAL_CHAIN.md  buzzbox-octa-squawker.afdesign
src/buzzbox_octa_squawker/src/: Makefile  buzzbox_hothouse.cpp  buzzbox_hothouse.h
src/tremtest/: README.md
(+34 files in other folders)
